--- a/app/views/signup.hbs
+++ b/app/views/signup.hbs
@@ -1,24 +1,6 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <title>Sign up for Twitter</title>
-  <meta charset="UTF-8">
-  <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-  <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.1.6/semantic.min.js"></script>
-  <link rel="stylesheet" media="screen" href="//cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.1.6/semantic.min.css">
-  <link rel="stylesheet" media="screen" href="css/main.css">
-  <link rel="shortcut icon" type="image/png" href="images/favicon.png">
-</head>
-<body>
-<section class="ui container">
-  <nav class="ui inverted menu">
-    <header class="header item"><a href="/"> Twitter </a></header>
-    <div class="right menu">
-      <a class="item" href="/signup"> Signup</a>
-      <a class="item" href="/login"> Login</a>
-    </div>
-  </nav>
-  <section class="ui raised segment">
+{{> welcomemenu }}
+
+<section class="ui raised segment">
     <div class="ui grid">
       <div class="ui ten wide column">
         <div class="ui stacked fluid form segment">
@@ -57,6 +39,3 @@
       </aside>
     </div>
   </section>
-</section>
-</body>
-</html>
