--- a/app/views/report.hbs
+++ b/app/views/report.hbs
@@ -1,10 +1,3 @@
-<nav class="ui inverted menu">
-  <header class="header item"> <a href="/"> Twitter </a> </header>
-  <div class="right menu">
-    <a class="item" href="/home"> Send message</a>
-    <a class="active item" href="/report">  History</a>
-    <a class="item" href="/logout">  Logout</a>
-  </div>
-</nav>
+{{> mainmenu _id="report" }}
 
 {{> tweetlist }}
