--- a/app/views/partials/mainmenu.hbs
+++ b/app/views/partials/mainmenu.hbs
@@ -3,6 +3,7 @@
   <div class="right menu">
     <a id="home"   class= "item" href="/home"> Message</a>
     <a id="report" class= "item" href="/report"> History</a>
+    <a id="settings" class= "item" href="/settings"> Settings</a>
     <a id="logout" class= "item" href="/logout"> Logout</a>
   </div>
 </nav>
