--- a/app/views/partials/tweet.hbs
+++ b/app/views/partials/tweet.hbs
@@ -9,7 +9,7 @@
             <i class="ui dropdown icon"></i>
             <div class="menu">
               {{#each users}}
-                <div class="item">{{firstName}} {{lastName}}</div>
+                <div class="item" data-value={{_id}} >{{firstName}} {{lastName}}</div>
               {{/each}}
             </div>
           </div>
