--- a/app/views/signup.hbs
+++ b/app/views/signup.hbs
@@ -32,10 +32,11 @@
             </div>
             <button class="ui blue submit button">Submit</button>
           </form>
+        {{> formerror }}
+      </div>
         </div>
       </div>
       <aside class="ui five wide column">
         <img src="images/twitter3.png" class="ui medium image">
       </aside>
-    </div>
   </section>
