--- a/app/views/partials/tweet.hbs
+++ b/app/views/partials/tweet.hbs
@@ -22,6 +22,7 @@
           </div>
           <button class="ui blue submit button">Send Message</button>
         </form>
+        {{> formerror }}
       </div>
     </div>
     <aside class="two wide column">
