add admin user, fix table properties, disable editing email of admin user, filter messages in history, delete messages in history, delete all own messages

--- a/app/views/partials/tweet.hbs
+++ b/app/views/partials/tweet.hbs
@@ -16,7 +16,7 @@
           <div class="grouped inline fields">
             <div class="field">
               <div class="ui input">
-                <input type="text" name="content" placeholder="Enter your message here ...">
+                <textarea maxlength="140" rows="4" name="content" placeholder="Enter your message here ..."></textarea>
               </div>
             </div>
           </div>
